取消备案描述

--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
           <ul class="space-y-2 text-gray-300">
             <li class="flex items-start">
               <i class="fa fa-envelope-o mt-1 mr-3"></i>
-              <a href="mailto:123@qq.com" class="hover:text-white transition-colors">123@qq.com</a>
+              <a href="mailto:12345678@qq.com" class="hover:text-white transition-colors">123@qq.com</a>
             </li>
             <li class="flex items-start">
               <i class="fa fa-map-marker mt-1 mr-3"></i>
-              <span>北京市大厦</span>
+              <span>广州市</span>
             </li>
             <li class="flex items-start">
               <i class="fa fa-phone mt-1 mr-3"></i>
@@ -355,8 +355,8 @@
       </div>
       
       <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
-        <p>© 2025 科技日报社 版权所有</p>
-        <p class="mt-1">京ICP备20250001号-1</p>
+        <p>© 2025 shalnu</p>
+        <p class="mt-1">Learn web</p>
         <div class="mt-4">
           <a href="#1" class="inline-flex items-center text-gray-400 hover:text-white transition-colors">
             <i class="fa fa-arrow-up mr-2"></i>返回顶部
